--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+  padding: 2em;
+}
+
+.ui-grid {
+  display: grid;
+  grid-template-areas:
+    "income expense savings"
+    "transfer transfer transfer";
+  gap: 1em;
+  width: 100%;
+  height: 100%;
+  grid-auto-rows: 3fr 1fr;
+  grid-auto-columns: 1fr;
+  position: relative;
+}
+
+.grid-item {
+  background-color: rgba(0, 0, 0, 0.25);
+  border-radius: 0.25em;
+  padding: 1em;
+}
+
+.grid-income {
+  grid-area: income;
+}
+.grid-expense {
+  grid-area: expense;
+}
+.grid-savings {
+  grid-area: savings;
+}
+.grid-transfer {
+  grid-area: transfer;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 1em;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+  width: 50%;
+  align-items: start;
+  text-align: left;
 }
