--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,9 @@ ul {
 .center {
   align-self: center;
 }
+
+.savings-info-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
